@@ -1,3 +1,11 @@
+SimpleComplex/Utils 1.x, 2017-06-05
+-----------------------------------
+- Unicode and Sanitize shan't use a logger. The benefit of logging argument
+  errors is nil (provided the environment's errorhandler traces exceptions),
+  and the extra complexity of a dependency is (was) considerable.
+- CliEnvironment allow extending constructur to provide dependency by other
+  means.
+
 SimpleComplex/Utils 1.x, 2017-06-04
 -----------------------------------
 - CliEnvironment and CliCommand.
